# SEC_2

./: Cargo.toml  README.md  manual_cargo_test.sh
DB/: docker-compose.yml  reminder.md
google/: Cargo.toml
google/src/: lib.rs
mail_sender/: Cargo.toml
mail_sender/src/: lib.rs
src/: login.rs  main.rs  register.rs  validator.rs
validators/: Cargo.toml
validators/src/: lib.rs
