[package]
name = "laboratoire_2"
version = "0.1.0"
authors = ["jerome <jerome.arn@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
google-authenticator = {version = "0.2.1", features = ["with-qrcode"]}
postgres = "0.15.2"
structopt = "0.3.21"
validators = { path = "validators" }
rust-argon2 = "0.5"
sha3 = "0.9.1"
hex = "0.4.3"
webbrowser = "0.5.5"
rand = "0.5.0"
