[package]
name = "google"
version = "0.1.0"
authors = ["jerome <jerome.arn@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-authenticator = {version = "0.2.1", features = ["with-qrcode"]}
read_input = "0.8"
